Change log for zeit.web
=======================

2.47 (unreleased)
-----------------

- BUG-327: Add webtrekk customerId for authenticated users

- ZON-2608: Prevent images from unwanted rescaling on mobile pages/apps

- ZON-2448: Fix IE11 misplaced buttons gallery bug

- ZON-2250: Add label to storystream

- ZON-2214: Enable Nextread for video pages

- ZON-2575: Move feature toggles to configuration file

- ZON-2594: New customParameter for Webtrekk: platform

- ZON-2592: Use dogpile.cache instead of beaker for caching/memcache

- ZON-2175: Add ressort and kicker to meta keywords

- ZON-2416: Insert new meta robot rules to Serienseiten

- HOTFIX: Make topic teaser more stable, if invalid CP is referenced

- FIX: Add ClickCounter to ZON

- FIX: Handle community read errors during recommendation (for real now)

- FIX: Be more defensive in several places:
  * Solr results with references to retracted images
  * Solr results with wrongly indexed content types
  * Comment count of objects that are neither CP nor Article
  * Reject delta_time requests for non-CPs

- FIX: Fix webtrekk string glue

- FIX: Add ClickCounter to ZON

- MAINT: Use our own session backend instead of beaker (stores data in
  memcache, but does not use a separate cookie -- which doesn't work anyway
  since /login-state is an ESI, so cookies it sends are eaten by Varnish)

- MAINT: Add WAI-ARIA roles, states, and properties for accordion component

- MAINT: Implement blacklist with a synthetic route, so metrics work again


2.46 (2016-01-06)
-----------------

- HOTFIX: Change webtrekk contentId


2.45 (2016-01-06)
-----------------

- ZON-2230: Multiple Infoboxes do not collapse anymore (includes code makeover)

- ZON-2579: Set sourcetype for Webtrekk

- MAINT: Fix pysolr error handling of non-ascii server responses

- FIX: Handle community read errors during recommendation

- ZON-2278: Make video teasers detectable on dynamic CPs

- ZON-2591: Make logo pointer appear in IE>=10 again
