@@ -1252,6 +1252,9 @@ def test_instantarticle_representation_should_have_content(testbrowser):
     assert bro.cssselect('figure > img[src$="square__2048x2048"]')
     assert len(bro.cssselect('aside')) == 3
 
+    assert 'Handlung, wohin man auch' in bro.cssselect('figcaption')[0].text
+    assert u'© Warner Bros.' == bro.cssselect('figure > cite')[0].text
+
 
 def test_instantarticle_should_wrap_with_cdata_if_asked(testbrowser):
     browser = testbrowser(
